# seeq

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  LICENSE.TXT  README.md  main.cpp  readme.md  tusb_config.h  usb_descriptors.c
docs/: _config.yml  index.md
docs/_includes/: footer.html  head.html  header.html
hardware/: .kibot.yaml  fp-info-cache  seeq.kicad_pcb  seeq.kicad_prl  seeq.kicad_pro  seeq.kicad_sch  seeq.step
hardware/gerbers/: seeq-B_Cu.gbr  seeq-B_Mask.gbr  seeq-B_Paste.gbr  seeq-B_Silkscreen.gbr  seeq-Edge_Cuts.gbr  seeq-F_Cu.gbr  seeq-F_Mask.gbr  seeq-F_Paste.gbr  seeq-F_Silkscreen.gbr  seeq-job.gbrjob  seeq.drl
hardware/mod/: logo-big.kicad_mod  logo.kicad_mod  notes.kicad_mod  seeq.kicad_mod
hardware/mod/3D/: rotary_encoder.wrl
lib/OLED/: OLED.cpp  OLED.h
lib/encoder/: encoder.cmake  encoder.hpp
lib/encoder_button/: encoder_button.h
lib/keypad/: CMakeLists.txt  keypad.c  keypad.cmake  keypad.h
lib/midi/: midi.c  midi.h
software/: CMakeLists.txt  main.cpp  midi_uart_lib_config.h  usb_descriptors.c
software/lib/OLED/: OLED.h
software/lib/PicoLED/: PicoLed.hpp  PicoLedTarget.cpp
software/lib/encoder/: encoder.cpp
software/lib/encoder_button/: encoder_button.c
software/lib/keypad/: keypad.c
software/lib/mcp4725/: CMakeLists.txt  mcp4725.c  mcp4725.h
software/lib/midi/: midi.c  midi.h
software/lib/midi_uart_lib/: CMakeLists.txt  midi_uart_lib.c
